--- a/app/src/main/res/layout/fragment_sks_admin_profile.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.sksAdmin.SksAdminProfileFragment">
+    tools:context=".ui.home.sksAdmin.profileFragment.SksAdminProfileFragment">
 
     <TextView
         android:id="@+id/textView26"
