--- a/app/src/main/res/layout/fragment_sks_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.sksAdmin.SksAdminSettingsFragment">
+    tools:context=".ui.home.sksAdmin.profileFragment.SksAdminSettingsFragment">
 
     <TextView
         android:id="@+id/textView30"
