--- a/app/src/main/res/layout/sks_admin_club_info_card_view.xml
+++ b/app/src/main/res/layout/sks_admin_club_info_card_view.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
+    android:id="@+id/sks_admin_club_info_card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
