--- a/app/src/main/res/layout/fragment_club_manager_profile.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile.xml
@@ -143,4 +143,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView58" />
 
+    <Button
+        android:id="@+id/btn_my_club_activities"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="37dp"
+        android:text="My Club's Activities"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/club_manager_profile_btn_edit_profile" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
