--- a/app/src/main/res/layout/fragment_club_manager_profile_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile_edit_profile.xml
@@ -111,7 +111,7 @@
         android:backgroundTint="#D9D9D9"
         android:ems="10"
         android:fontFamily="@font/poppins"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textColor="#525252"
