--- a/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.sksAdmin.requestFragment.posts.pending.SksAdminPostsPendingDetailFragment" >
+    tools:context=".ui.home.sksAdmin.requestFragment.edits.SksAdminEditsPostsPendingFragment" >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/poppins"
-                android:text="Pending"
+                android:text="Edit Post"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,18 +54,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView25"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppins"
-                android:text="Post Request"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView58" />
-
-            <TextView
                 android:id="@+id/textView58"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,20 +64,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView241" />
 
             <ImageView
-                android:id="@+id/sks_admin_posts_pending_photo"
+                android:id="@+id/sks_admin_edit_post_photo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="9dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/circular_background"
                 android:clipToOutline="true"
                 android:drawableLeft="@drawable/request_approved_icon"
-                android:fontFamily="@font/poppins"
                 android:gravity="center"
                 android:scaleType="centerCrop"
-                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView25" />
+                tools:layout_editor_absoluteY="120dp" />
 
             <TextView
                 android:id="@+id/textView661"
@@ -101,11 +88,11 @@
                 android:text="Title of Activity"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/sks_admin_posts_pending_title"
+                app:layout_constraintBottom_toTopOf="@+id/sks_admin_edit_post_title"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_title"
+                android:id="@+id/sks_admin_edit_post_title"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="32dp"
@@ -119,7 +106,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_photo" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_photo" />
 
             <TextView
                 android:id="@+id/textView681"
@@ -132,13 +119,13 @@
                 android:text="Content"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/sks_admin_posts_pending_content"
+                app:layout_constraintBottom_toTopOf="@+id/sks_admin_edit_post_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_title"
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_title"
                 app:layout_constraintVertical_bias="0.037" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_content"
+                android:id="@+id/sks_admin_edit_post_content"
                 android:layout_width="0dp"
                 android:layout_height="175dp"
                 android:layout_marginStart="32dp"
@@ -157,7 +144,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView681" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_event_goals"
+                android:id="@+id/sks_admin_edit_post_event_goals"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
                 android:layout_marginStart="32dp"
@@ -185,10 +172,10 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_event_goals" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_event_goals" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_agenda"
+                android:id="@+id/sks_admin_edit_post_agenda"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
                 android:layout_marginStart="32dp"
@@ -217,10 +204,10 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_agenda" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_agenda" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_start_date"
+                android:id="@+id/sks_admin_edit_post_start_date"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="32dp"
@@ -249,10 +236,10 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_start_date" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_start_date" />
 
             <TextView
-                android:id="@+id/sks_admin_posts_pending_end_date"
+                android:id="@+id/sks_admin_edit_post_end_date"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="32dp"
@@ -272,7 +259,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/sks_admin_posts_pending_btn_approve"
+                android:id="@+id/sks_admin_edit_post_btn_approve"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -285,7 +272,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.151"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_forms_pending_end_date" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_end_date" />
 
             <TextView
                 android:id="@+id/textView63"
@@ -297,12 +284,12 @@
                 android:fontFamily="@font/poppins"
                 android:text="Event Goals"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/sks_admin_posts_pending_event_goals"
+                app:layout_constraintBottom_toTopOf="@+id/sks_admin_edit_post_event_goals"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_content" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_content" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/sks_admin_posts_pending_btn_reject"
+                android:id="@+id/sks_admin_forms_pending_btn_reject"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -315,7 +302,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.896"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_end_date" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_end_date" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
