--- a/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
@@ -77,17 +77,17 @@
 
             <ImageView
                 android:id="@+id/sks_admin_forms_approved_photo"
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="32dp"
-                android:background="@drawable/gradient_background"
-                android:drawableLeft="@drawable/request_approved_icon"
+                android:background="@drawable/circular_background"
                 android:fontFamily="@font/poppins"
+                android:clipToOutline="true"
+                android:drawableLeft="@drawable/request_approved_icon"
                 android:gravity="center"
-                android:paddingLeft="32dp"
-                android:text="Your request has been approved"
+                android:scaleType="centerCrop"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -260,47 +260,18 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="40dp"
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="text"
                 android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
-
-            <TextView
-                android:id="@+id/textView60"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="32dp"
-                android:fontFamily="@font/poppins"
-                android:gravity="center"
-                android:text="If you'd like to publish the post-event report for this event, please create a post-request below."
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_forms_approved_end_date" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_create_post_request"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="80dp"
-                android:background="@drawable/gradiant_color"
-                android:fontFamily="@font/poppins"
-                android:text="CREATE POST REQUEST"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView60" />
 
             <TextView
                 android:id="@+id/textView63"
