--- a/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
@@ -77,18 +77,16 @@
 
             <ImageView
                 android:id="@+id/sks_admin_forms_pending_photo"
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="32dp"
-                android:background="@drawable/gradient_background"
+                android:background="@drawable/circular_background"
+                android:clipToOutline="true"
                 android:drawableLeft="@drawable/request_approved_icon"
-                android:fontFamily="@font/poppins"
                 android:gravity="center"
-                android:paddingLeft="32dp"
-                android:text="Your request has been approved"
-                android:textSize="12sp"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView25" />
@@ -260,38 +258,24 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="150dp"
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="text"
                 android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
 
-            <TextView
-                android:id="@+id/textView60"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="32dp"
-                android:fontFamily="@font/poppins"
-                android:gravity="center"
-                android:text="If you'd like to publish the post-event report for this event, please create a post-request below."
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sks_admin_forms_pending_end_date" />
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sks_admin_forms_pending_btn_approve"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="80dp"
                 android:background="@drawable/gradiant_color"
                 android:fontFamily="@font/poppins"
@@ -301,8 +285,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.151"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView60"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_forms_pending_end_date" />
 
             <TextView
                 android:id="@+id/textView63"
@@ -322,6 +305,7 @@
                 android:id="@+id/sks_admin_forms_pending_btn_reject"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="80dp"
                 android:background="@drawable/gradiant_color"
                 android:fontFamily="@font/poppins"
@@ -330,7 +314,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.896"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sks_admin_forms_pending_end_date" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
